<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="85dp"
    android:layout_marginTop="14dp"
    app:cardCornerRadius="18dp"
    app:cardBackgroundColor="@android:color/white"
    app:strokeWidth="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_name"
            android:src="@drawable/ic_name"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textColor="#222222"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/edtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:hint="@string/enter_your_name"
                android:inputType=""
                android:textSize="15sp"
                android:textColor="#222222"
                android:textColorHint="#9A9A9A"/>

            <!-- Đường gạch ngang -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="#C1C9BE"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>